Fixed alignment of edit link

--- a/site/resources/assets/scss/docs.scss
+++ b/site/resources/assets/scss/docs.scss
@@ -112,7 +112,7 @@ $docs-border-color: #e6e7e9;
 
 	.docs-content-edit {
 		position: absolute;
-		top: 0;
+		top: -2px;
 		right: 0;
 
 		font-size: 12px;
